fix: use anchor tag for navigation button

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   <!-- Navigation Button to New Page -->
   <div class="container" style="text-align: center;">
-    <button class="nav-btn" onclick="window.open('newpage.html', '_blank')">Open New Page</button>
+    <a href="newpage.html" class="nav-btn" target="_blank">Open New Page</a>
   </div>
 
   <!-- Cuisine Section -->
